<resources>
    <string name="app_name">Makecash</string>
    <string name="username">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="password2">Repetir Contraseña</string>
    <string name="login">INGRESAR</string>
    <string name="forgot">¿Olvidaste tu contraseña?</string>
    <string name="recordar">Recordarme</string>
    <string name="registro">REGISTER</string>
    <string name="correo">Correo</string>
    <string name="signup">SIGN UP</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="or">ó</string>
    <string name="login_with">Ingresar con:</string>
    <string name="inicio">Inicio</string>
    <string name="vender">Vender</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="favoritos">Favoritos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="opciones">Opciones</string>
    <string name="ayuda">Ayuda</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cuenta">Mi Cuenta</string>
    <string name="welcome">Bienvenido</string>
    <string name="Compras">Carrito de compras</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="mensajes">Mensajes</string>
    <string name="anuncios">Mis Anuncios</string>
    <string name="fav_msj">No tienes favoritos</string>
    <string name="mens_msj">No tienes mensajes</string>
    <string name="anun_msj">Aún no tienes anuncios</string>
    <string name="not_msj">Aún no tienes notificaciones</string>
    <string name="inicio_msj">No hay publicaciones para ver</string>
    <string name="title_anuncio">Título de tu anuncio</string>
    <string name="add_title">Agrega un título</string>
    <string name="descripcion">Descripción</string>
    <string name="add_descripcion">Agrega una descripción</string>
    <string name="precio">Precio:</string>
    <string name="add_precio">Agrega el precio</string>
    <string name="save">GUARDAR</string>
    <string name="take_picture">Tomar foto</string>
    <string name="take_gallery">Buscar en galeria</string>
    <string name="examinar">Examinar</string>

</resources>