<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_inicio"
                android:icon="@drawable/ic_menu_send"
                android:iconTint="@color/colorPrimary"
                android:title="@string/inicio" />
        <item
                android:id="@+id/nav_vender"
                android:icon="@drawable/ic_menu_camera"
                android:iconTint="@color/colorPrimary"
                android:title="@string/vender" />
        <item
                android:id="@+id/nav_cuenta"
                android:icon="@drawable/ic_menu_gallery"
                android:iconTint="@color/colorPrimary"
                android:title="@string/cuenta" />
        <item
                android:id="@+id/nav_favoritos"
                android:icon="@drawable/ic_menu_slideshow"
                android:iconTint="@color/colorPrimary"
                android:title="@string/favoritos" />
        <item
                android:id="@+id/nav_notificaciones"
                android:icon="@drawable/ic_menu_share"
                android:iconTintMode="@color/colorPrimary"
                android:title="@string/notificaciones" />
        <item
                android:id="@+id/nav_opciones"
                android:icon="@drawable/ic_menu_manage"
                android:titleCondensed="@color/colorPrimary"
                android:title="@string/opciones" />
    </group>

</menu>
