<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_mis_anuncios"
                android:icon="@drawable/ic_menu_send"
                android:iconTint="@color/colorPrimary"
                android:title="@string/anuncios" />
        <item
                android:id="@+id/nav_favoritos"
                android:icon="@drawable/ic_menu_camera"
                android:iconTint="@color/colorPrimary"
                android:title="@string/favoritos" />
        <item
                android:id="@+id/nav_mensajes"
                android:icon="@drawable/ic_menu_manage"
                android:iconTint="@color/colorPrimary"
                android:title="@string/mensajes" />
    </group>

</menu>
