<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:id="@+id/constraintLayout">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">


            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/imageView"
                    android:layout_marginTop="80dp"
                    android:src="@mipmap/makecash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="1dp"
                    android:id="@+id/et_name"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="48dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:focusable="auto" tools:ignore="UnusedAttribute"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/siluetausuario"
                    app:layout_constraintTop_toTopOf="@+id/et_name"
                    app:layout_constraintBottom_toBottomOf="@+id/et_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.915"
                    app:layout_constraintVertical_bias="0.526"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="1dp"
                    android:id="@+id/et_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_name"
                    android:focusable="auto" tools:ignore="UnusedAttribute"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bloquear"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/et_password"
                    app:layout_constraintBottom_toBottomOf="@+id/et_password"
                    app:layout_constraintHorizontal_bias="0.898"
                    app:layout_constraintVertical_bias="0.473"/>

            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.079"
                    app:layout_constraintTop_toBottomOf="@+id/et_password">

                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rb_remember"
                        android:text="@string/recordar"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="italic"
                        android:textSize="10sp"/>


            </RadioGroup>


            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="1dp"
                    android:id="@+id/btn_login"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="italic"
                    android:background="@drawable/btn_border_round"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_password"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="0.3dp"
                    android:textStyle="italic"
                    android:text="@string/forgot"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login"
                    android:id="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"/>

            <TextView
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:text="@string/login_with"
                    android:textColor="@color/black" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
                    android:id="@+id/textView"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/btn_google"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton2"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@+id/btn_google"
                    android:layout_marginStart="8dp" android:id="@+id/textView3"/>

            <com.google.android.gms.common.SignInButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_google"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton2"
                    app:layout_constraintHorizontal_bias="0.411"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

            </com.google.android.gms.common.SignInButton>


            <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageButton2"
                    android:scaleType="center"
                    android:src="@drawable/facebook2"
                    app:layout_goneMarginBottom="32dp"
                    android:layout_marginEnd="96dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_google"/>


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_app"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:textColor="@color/darkorange"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>